# Tessellum

./: .gitignore  CLAUDE.md  FEATURES_GUIDE.md  Full Application Functionality Test.md  LICENSE  Project Overview.md  README.md  UI_IMPROVEMENTS.md  Usability Test Questionnaire.md  cypress.config.ts  extracted_classes.json  extracted_rust.json  index.html  memoria_tessellum_extract.txt  package-lock.json  package.json  ram-samples.csv  tailwind.config.js  tsconfig.build.json  vite.config.ts  wdio.conf.cjs
coverage/: clover.xml  coverage-final.json  index.html
cypress/: run.cjs  tsconfig.json
docs/: tessellum-analysis.md
e2e/: README.md  run.cjs  run.js
scripts/: extract_classes.js  extract_rust.js  generate_une_markdown.js  run-tauri-with-kuzu-prebuilt.mjs
src/: App.css  App.tsx  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.ci-verify.conf.json  tauri.ci.conf.json  tauri.conf.json  todo_fusionado.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  grafeo_projection.rs  indexer.rs  kuzu_projection.rs  lib.rs  main.rs  performance_tests.rs  search.rs  test_support.rs  trash.rs
src-tauri/src/commands/: ai.rs  assets.rs  clipboard.rs  dataview.rs  export.rs  folders.rs  graph.rs  history.rs  indexer.rs  links.rs  mod.rs  notes.rs  pdf_export.rs  plugins.rs  publish.rs  recovery.rs  scripts.rs  search.rs  semantic.rs  sync.rs  templates.rs  vault.rs  watcher.rs
src-tauri/src/models/: app_state.rs  asset_index.rs  file_index.rs  file_metadata.rs  indexing_record.rs  mod.rs  wikilink.rs
src-tauri/src/sync/: git_adapter.rs  mod.rs
src-tauri/src/utils/: config.rs  frontmatter.rs  mod.rs  sanitize.rs  tags.rs  validate.rs
src-tauri/tests/: performance.rs
(+658 files in other folders)
