[package]
name = "tessellum"
version = "0.1.0"
description = "A Note taking application built with Rust and Tauri"
authors = ["Jorge Carriles Ruiz"]
edition = "2024"
default-run = "tessellum"

[package.metadata.bundle]
name = "Tessellum"
identifier = "com.tessellum"
icon = ["icons/icon.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tessellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest=false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
notify = "8.2.0"
tauri-plugin-dialog = "2.5.0"
tempfile = "3.24.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
regex = "1.12.2"
state = "0.6.0"
log = "0.4.29"
tauri-plugin-fs = "2.4.5"
tauri-plugin-persisted-scope = "2"
thiserror = "2.0.18"
serde_yaml = "0.9.34+deprecated"
chrono = "0.4.43"
tauri-plugin-window-state = "2.4.1"
tantivy = "0.25.0"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

grafeo = "0.5.39"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Shell"] }
